test/T3/Pass/Scope1.ic
/* Quicksort <n>: sorts an array of n integers initialized
with random values.
Output: the array contents before and after sorting.
*/

//class Library{
//    void println(string s) {}
//    void print(string s) {}
//    void printi(int i) {}
//    int stoi(string s, int i) {}
//   int random(int n) {}
//    void exit(int n) {}
//}


//class Quicksort extends Sort{


class B{
static void main(string[] args)
	{
	}

	void c(){
		int a;
		int b;
		a = 3;
		{
			int a = 34;
		}
		b=a+2;
	}
}



